# Emotion-Detection-with-Computer-Vision

./: .gitignore  LICENSE  README.md
Backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Backend/Models/: photo_model.py
Backend/Schema/: emotion_detector.py
Backend/Services/: emotion_service.py
Backend/api/: main.py
Frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx
Frontend/src/components/: UploadPhoto.jsx  header.jsx
